--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./focus.css">
+    <link rel="stylesheet" href="FOCUS/FOCUS-home/focus.css">
     <link rel="icon" href="c:\Users\user\OneDrive\Imágenes\f.png">
     <title>FOCUS</title>
 </head>
@@ -39,7 +39,7 @@
 </div>
 
     <video muted autoplay loop>
-        <source src="./lv-0-20240305140410_BQvnQ0re.mp4" type="video/mp4">
+        <source src="./FOCUS/FOCUS-home/lv-0-20240305140410_BQvnQ0re.mp4" type="video/mp4">
     </video>
 <div class="cap"></div>
 
