--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
 <div class="remenber-forgot">
     <label><input type="checkbox" required>VERIFICACION</label>
-    <a href="c:\Users\user\OneDrive\Escritorio\FOCUS\FOCUS-contacto\focussss.html#" target="_blank" style="color:aliceblue;">CONTACTANOS</a>
+    <a href="C:\Users\user\documenos\Documentos\FOCUSS----PROYECTOO\FOCUS\FOCUS-contacto\focussss.html" target="_blank" style="color:aliceblue;">CONTACTANOS</a>
     </div>
     <a href="C:\Users\user\OneDrive\Escritorio\FOCUS\FOCUS-LOGIN\focusss.html" target="_blank">
         <button class="btm">Login</button>
     <a>
 
 <div class="register-link">
-    <p><a href="C:\Users\user\OneDrive\Escritorio\FOCUS\FOCUS-galeria\focuss.html#" target="_blank">PRODUCTOS</a></p>   
+    <p><a href="C:\Users\user\documenos\Documentos\FOCUSS----PROYECTOO\FOCUS\FOCUS-galeria\focuss.html" target="_blank">PRODUCTOS</a></p>   
 </div>
     </form>
 </div>
