--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="FOCUS/FOCUS-home/focus.css">
-    <link rel="icon" href="c:\Users\user\OneDrive\Imágenes\f.png">
+    <link rel="icon" href="./FOCUS/FOCUS-home/f.png">
     <title>FOCUS</title>
 </head>
 <body>
